clang/test/BSC/Negative/Ownership/RuleCheck/multi-level-pointer2/multi-level-pointer2.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void cons(int * owned p) {
    int* a = (int *)p;
}

int * owned * func4(int * owned * p) {
    int * owned re1 = *p;
    cons(re1);
    return p;
}

int * owned * owned func6(int * owned * owned p) {
    int * owned re1;
    re1 = *p;
    *p = re1;
    return p;
}

void consumePtr(int * owned p) {
    int * p1 = (int *)p;
    return;
}

void f1(int owned * p) { // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    return;
}

int * owned f2(int * owned p) {
    int * owned re1 = p;
    return re1;
}

int * owned * f3(int * owned * p) {
    int * owned re1 = *p;
    consumePtr(re1);
    return p;
}

int * owned * owned * f7(int * owned * owned * p) {
    int * owned re1;
    re1 = **p;
    cons(re1);
    return p;
}

int main() {
    return 0;
}